--- a/homeworks/2018-02-03 lab1.ipynb
+++ b/homeworks/2018-02-03 lab1.ipynb
@@ -122,7 +122,10 @@
    "outputs": [],
    "source": [
     "def nans_to_mean(X):\n",
-    "    # YOUR CODE HERE"
+    "    mean = np.nanmean(X)\n",
+    "    nan_indices = np.where(np.isnan(X))\n",
+    "    X[nan_indices] = mean\n",
+    "    return X"
    ]
   },
   {
