--- a/contest2_toxic/baseline.ipynb
+++ b/contest2_toxic/baseline.ipynb
@@ -44,8 +44,8 @@
    "source": [
     "class_names = [\"toxic\", \"severe_toxic\", \"obscene\", \"threat\", \"insult\", \"identity_hate\"]\n",
     "\n",
-    "train = pd.read_csv(\"./train.csv\").fillna(\" \")\n",
-    "test = pd.read_csv(\"./test.csv\").fillna(\" \")\n",
+    "train = pd.read_csv(\"./data/train.csv\").fillna(\" \")\n",
+    "test = pd.read_csv(\"./data/test.csv\").fillna(\" \")\n",
     "\n",
     "train_text = train[\"comment_text\"]\n",
     "test_text = test[\"comment_text\"]\n",
@@ -304,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv(\"submission.csv\", index=False)"
+    "submission.to_csv(\"./submissions/baseline.csv\", index=False)"
    ]
   }
  ],
