--- a/contest2_toxic/toxic-comments.ipynb
+++ b/contest2_toxic/toxic-comments.ipynb
@@ -139,7 +139,7 @@
     }
    ],
    "source": [
-    "train_df = pd.read_csv(\"./train.csv\")\n",
+    "train_df = pd.read_csv(\"./data/train.csv\")\n",
     "train_df.head()"
    ]
   },
