--- a/contest2_toxic/toxic-comments.ipynb
+++ b/contest2_toxic/toxic-comments.ipynb
@@ -172,6 +172,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from string import punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "junk_symbols = punctuation + \"\\r\\n\\t\"\n",
+    "def clean_line(line):\n",
+    "    line = junk_symbols.sub(\"\", line)\n",
+    "    return line"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -179,10 +200,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk import wordpunct_tokenizer"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "TF-IDF на словах:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_vectorizer = TfidfVectorizer(\n",
+    "    sublinear_tf=True,\n",
+    "    strip_accents=\"unicode\",\n",
+    "    analyzer=\"word\",\n",
+    "    token_pattern=r\"\\w{1,}\",\n",
+    "    stop_words=\"english\",\n",
+    "    ngram_range=(1, 1),\n",
+    "    max_features=10000)"
    ]
   },
   {
@@ -230,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
